--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -1,5 +1,19 @@
 @charset "UTF-8";
 
+/* 공통 */
 #wrap, .content{width:980px; font-family: "Roboto";}
 a, button{cursor: pointer;}
-a,  a:link, a:visited, a:active, a:hover{text-decoration: none; color: black; }
+a, a:link, a:visited, a:active, a:hover{text-decoration: none; color: black; }
+
+
+/* 헤더2 */
+#header_section{ width:980px; font-weight: bold; font-family:"Roboto"; color: black; position: relative; margin: 0px auto; left: -130px;}
+#header_section ul{margin-top : 10px;}
+#header_section li{ display: inline; list-style: none; z-index:2;}
+#header_section .logo{position: relative; left: 20px;}
+#header_section .menu{text-align: right; margin-left: 20px; position : relative; left:500px;}
+#header_section a, #header_section a:link, #header_section a:visited,#header_section a:active,#header_section a:hover {color : black; text-decoration: none; cursor: pointer;}
+.search_wrap{ position: relative; left: 180px; top: -43px;}
+.search_wrap select{ width : 90px; height: 37px; position: relative; left:-195px; text-align: center; border-radius: 6px;}
+.search_group { position: relative; top: -37px; flex-wrap: wrap;align-items: stretch; width: 30%;}
+.search_group .btn.btn-outline-primary {color: #0d6efd; background-color: white; position: relative; border-color: #0d6efd; left: 187px; top: -38px;}
