--- a/src/main/webapp/resources/css/product.css
+++ b/src/main/webapp/resources/css/product.css
@@ -20,9 +20,8 @@
 .order_now_btn{background-color: #35858B; color:white; border-color: transparent;}
 .btn.btn-outline-secondary{width : 40px; font-size: 15px;}
 .input-group.mb-3{width: 130px; height: 33px; margin-top:2px; margin-left:25px;}
-#minusBtn{position: relative; left:52px; border-bottom-right-radius: 4px; border-top-right-radius: 4px;}
-#orderCount{position: relative; left:-38px; text-align: center; background-color: white;}
-
+#plusBtn{position: relative; left:52px; border-bottom-right-radius: 4px; border-top-right-radius: 4px;}
+#orderCount{position: relative; left:-38px; text-align: center; background-color: white; border-top: 1px solid gray; border-bottom : 1px solid gray; border-bottom-right-radius: 0; border-top-right-radius: 0;}
 .product_detail{width:900px; height: auto; text-align: left; border: 5px solid  #35858B; border-radius : 20px; overflow: hidden; margin : 30px 0px 0px 40px; padding:20px;}
 .product_detail label{font-size: 18px; font-weight: bold; margin-left : 5px;}
 .product_detail ul{margin-top:18px;}
