--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -14,6 +14,7 @@ a, a:link, a:visited, a:active, a:hover{text-decoration: none; color: black; }
 #header_section .menu{text-align: right; margin-left: 20px; position : relative; left:500px;}
 #header_section a, #header_section a:link, #header_section a:visited,#header_section a:active,#header_section a:hover {color : black; text-decoration: none; cursor: pointer;}
 .search_wrap{ position: relative; left: 180px; top: -43px;}
-.search_wrap select{ width : 90px; height: 37px; position: relative; left:-195px; text-align: center; border-radius: 6px;}
+.search_wrap select{ width : 90px; height: 37px; position: relative; left:-195px; text-align: center; border-radius: 6px; border-color: #35858B; color:#35858B;}
 .search_group { position: relative; top: -37px; flex-wrap: wrap;align-items: stretch; width: 30%;}
-.search_group .btn.btn-outline-primary {color: #0d6efd; background-color: white; position: relative; border-color: #0d6efd; left: 187px; top: -38px;}
+.search_group .form-control.rounded{border-color: #35858B;}
+.search_group .btn.btn-outline-primary {color: #35858B; background-color: white; position: relative; border-color: #35858B; left: 187px; top: -38px;}
