--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -27,7 +27,45 @@
 .total_price_area .row .col strong,.total_price_area .row .col .totalPrice{font-size:20px; line-height: 4;}
 
 /* 취소/ 주문 버튼 영역 */
-.order_btn_area{margin-top:40px; margin-bottom: 80px; text-align: right;}
+.order_btn_area{margin-top:40px; text-align: right;}
 .order_btn_area button{width:120px; font-weight: bold;}
 .order_btn_area .btn.btn-primary.btn-lg{background-color: white; color:rgb(208, 202, 178); border:1px solid rgb(208, 202, 178);}
 .order_btn_area .btn.btn-secondary.btn-lg{background-color: rgb(208, 202, 178); border-color: transparent;}
+
+
+
+/* 주문 페이지 - order.jsp */
+
+/* 주문 상품 목록 */
+.order_label{margin-top:50px;}
+.order_label i{margin-left:5px; color: red;}
+.orderList{height:auto; width:980px; margin-top:50px;}
+.orderList .orderListTb{width:100%; text-align: left;}
+.orderList .orderListTb th{background-color: rgb(222, 217, 196); height: 35px; border-top: 1px solid darkgray; border-bottom:1px solid darkgray; padding-left: 5px;}
+.orderList .orderListTb td{border-bottom:1px solid darkgray; height:30px; padding-left:10px;}
+.orderList .orderListTb .total_price{text-align: right;}
+
+/* 배송지 정보 영역 */
+.deliverInfo{width:980px; margin-top:50px; height:250px; padding-top:50px; border:3px solid rgb(208, 202, 178); border-radius: 20px;}
+.deliverInfo_label, .pay_label{width:250px; height:50px; background-color: rgb(208, 202, 178); border-radius: 20px; font-size: 18px; font-weight: bold; z-index:2; position: relative; top: 80px; left: -376px; line-height: 2.5;}
+.deliverInfo .deliverTb{width:100%; height: 150px;}
+.deliverInfo .deliverTb th{width:15%; text-align: left; padding-left:40px; }
+.deliverInfo .deliverTb .addrInfo{font-size:13px; font-weight: bold;}
+.deliverInfo .deliverTb .addr{width:60%;}
+.deliverInfo .deliverTb .addr2{ border-color:transparent; border-bottom-color: rgb(208, 202, 178); height: 30px; margin-bottom: 10px; width:575px;}
+input:focus, button:focus{outline:none;}
+
+.deliverInfo .deliverTb .btn.btn-outline-info{width:200px; color:rgb(208, 202, 178);border:2px solid rgb(208, 202, 178); font-weight: bold;}
+.deliverInfo .deliverTb .btn.btn-outline-info:hover{background-color:rgb(208, 202, 178); border:none; color : white; font-weight: bold;}
+
+/*결제 정보 영역 */
+.payInfo{width:980px; margin-top:50px; height:150px; padding-top:35px; border : 3px solid rgb(208, 202, 178); border-radius: 20px;}
+.payInfo .payTb{width:100%; height: 100px;}
+.payInfo .payTb th{width:15%; padding-left:40px;}
+.payInfo .payTb td{text-align: left;}
+.payInfo .payTb input[type='radio']{width:30px; height: 20px; position: relative; top:-5px;}
+.payInfo .payTb .bi.bi-credit-card{margin-left:5px; font-size:40px;}
+
+/* 페이지 맨 하단 버튼 안잘리게 빈 영역 하나 놓고 높이조정*/
+.margin_bottom{height: 60px;}
+
