--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,11 +1,10 @@
 @charset "UTF-8";
 
 /* 메인 헤더 */
-#header_section{ width:980px; font-weight: bold; font-family:"Roboto"; color: white; position: relative; margin: 0px auto; left: -130px;}
-#header_section ul{margin-top : 10px;}
-#header_section li{ display: inline;list-style: none; z-index:2;}
-#header_section .logo{position: relative; left: 20px;}
-#header_section .menu{text-align: right; margin-left: 20px; position : relative; left:500px;}
+#header_section{ width:980px; font-weight: bold; font-family:"Roboto"; color: white; }
+#header_section ul{margin-top : 10px; margin-right: 10px;}
+#header_section li{z-index:2; width:auto; text-align: right; padding-right: 10px;}
+#header_section .logo{position: relative; left:-400px; top:35px; z-index:2;}
 #header_section a, #header_section a:link, #header_section a:visited,#header_section a:active,#header_section a:hover {color : white; text-decoration: none; cursor: pointer;}
 
 
