--- a/src/main/webapp/resources/css/join.css
+++ b/src/main/webapp/resources/css/join.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 /* 회원가입, 로그인 메인 - join.jsp*/
-.logo{margin-top: 30px;}
-.content{margin-top : 50px;}
+.join_logo{margin-top: 30px;}
+.join_content{margin-top : 50px;}
 .social, .member_login{width : 800px; height: 300px; margin-bottom: 80px; border: 4px solid; border-radius: 15px;}
 .social{border-color: rgb(252, 209, 209);}
 .member_login{border-color: rgb(236, 226, 225);}
