--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -13,7 +13,7 @@ a, a:link, a:visited, a:active, a:hover{text-decoration: none; color: black; }
 #header_section .logo{position: relative; left:-400px; top:35px; z-index:2;}
 #header_section a, #header_section a:link, #header_section a:visited,#header_section a:active,#header_section a:hover {color : black; text-decoration: none; cursor: pointer;}
 .search_wrap{ position: relative; left: -60px; top: -27px;}
-.search_wrap select{ width : 90px; height: 37px; position: relative; left:-195px; text-align: center; border-radius: 6px; border-color: #35858B; color:#35858B;}
-.search_group { position: relative; top: -37px; flex-wrap: wrap;align-items: stretch; width: 30%;}
+.search_wrap select{ width : 90px; height: 37px; position: relative; left:-195px; text-align: center; border-radius: 6px; border-color: #35858B; color:#35858B; z-index:2;}
+.search_group { position: relative; top: -37px; flex-wrap: wrap;align-items: stretch; width: 30%; z-index:2; }
 .search_group .form-control.rounded{border-color: #35858B;}
 .search_group .btn.btn-outline-primary {color: #35858B; background-color: white; position: relative; border-color: #35858B; left: 187px; top: -38px;}
