--- a/src/main/webapp/resources/css/join.css
+++ b/src/main/webapp/resources/css/join.css
@@ -26,3 +26,17 @@
 .join_input_area{margin-top : 50px;}
 .join_input_area label{font-size:10px; position: relative; top: -13px; text-align: left; width: 600px; margin-left: 10px;} 
 .join_input_area button{width:130px; font-weight: bold;}
+
+
+/* 관리자 페이지 - 회원관리 memberList.jsp */
+
+.member_content{ margin-bottom: 50px;}
+.member_content{height: auto;}
+
+.member_search{margin-top:-30px; text-align: left; padding-left:30px;}
+.member_search .form-control.rounded{width:300px;} 
+.member_search button{position: relative; top:-38px; left:310px; font-weight: bold;}
+.memberListTb{ width: 900px; text-align: center; margin-left:-20px;}
+.memberListTb th{background-color: lightgray; border: 1px solid darkgray;}
+.memberListTb td{border-bottom: 1px solid lightgray; border-left: 1px solid lightgray; border-right: 1px solid lightgray;}
+.memberListTb button{height: 30px; line-height: 1;}
