--- a/src/main/webapp/resources/css/product.css
+++ b/src/main/webapp/resources/css/product.css
@@ -27,3 +27,27 @@
 .product_detail label{font-size: 18px; font-weight: bold; margin-left : 5px;}
 .product_detail ul{margin-top:18px;}
 
+
+/* 관리자페이지 - 상품관리 */
+
+.product_search{margin-top:-30px; text-align: left; padding-left:30px;}
+.product_search .form-control.rounded{width:300px;} 
+.product_search button{position: relative; top:-38px; left:310px; font-weight: bold;} 
+.product_insert{position:relative; top:-76px; text-align: right; width: 400px; margin-left:470px;}
+.modifyInfo{text-align: right; margin-right:50px; font-size:14px; margin-top:-20px; margin-bottom:10px;}
+.modifyInfo i{margin-right: 5px;}
+.modifyInfo strong{ color: red;}
+
+
+.productListTb{width: 900px; text-align: center; margin-left:-20px;}
+.productListTb th{background-color: lightgray; border: 1px solid darkgray;}
+.productListTb td{border-bottom: 1px solid lightgray; border-left: 1px solid lightgray; border-right: 1px solid lightgray;}
+.productListTb button{height: 30px; line-height: 1;}
+.productListTb img{width:100px; height: auto; margin:10px;}
+.productListTb #modifyItem1,.productListTb #modifyItem2,.productListTb #modifyItem3{border: none; text-align: center;}
+.productListTb #modifyItem1{cursor:pointer;}
+.productListTb #modifyItem3{width:70px;}
+.productListTb .btn.btn-outline-secondary{width:58px;}
+input:focus {outline: none;}
+
+.modal-body input[type='text']{width: 300px; height: 50px; border-color: transparent; border-bottom: 2px solid lightgray;}
