소셜로그인/회원가입/로그인 기능구현
소셜로그인 - 카카오/네이버
회원가입 - 소셜 로그인 후 간단히 가입, 소셜로그인 계정 중복확인(중복가입x), 휴대폰 SMS인증 -> 기능작동 확인 후 주석 처리
로그인 구현

--- a/src/main/webapp/resources/css/join.css
+++ b/src/main/webapp/resources/css/join.css
@@ -16,7 +16,8 @@
 .login_input_area img{width: 60px; height: 35px;}
 .input-group.flex-nowrap{width : 350px; margin-top: 10px; position: relative; left:-55px;}
 .input-group-text{background-color: rgb(236, 226, 225); width : 60px;}
-.login_btn_area button{width: 90px; height: 108px; position: relative; left: 185px; top: -108px;}
+.loginCheckLabel{font-size:13px; color:red; position:relative;  width:300px; right : 67px; text-align: left; top:5px; height: 20px;}
+.login_btn_area button{width: 90px; height: 108px; position: relative; left: 185px; top: -128px;}
 .login_btn_area button,.join_input_area button, .modal-footer .btn.btn-primary{border-color: transparent;background-color: rgb(236, 226, 225); color : black;}
 .login_btn_area button,.join_input_area button{border-radius: 10px;}
 
