--- a/src/main/webapp/resources/css/search.css
+++ b/src/main/webapp/resources/css/search.css
@@ -9,6 +9,6 @@
 .row{--bs-gutter-x: -10rem; margin-left : 0px; margin-right: 10px; }
 .col-md img, .col-md p{cursor: pointer;}
 .col-md p{width: 300px; text-align: center; background-color: #4FBDBA; font-weight: bold;}
-.col-md{margin-left: 10px;}
+.col-md{margin-left: 10px; margin-top:30px;}
 
 .noResult{margin-left : 20px; font-size:18px;}
