--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
         	
     
-    <wb-module deploy-name="recipe-1.0.0-BUILD-SNAPSHOT">
+    <wb-module deploy-name="recipe_mysql-1.0.0-BUILD-SNAPSHOT">
                         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
@@ -14,8 +14,6 @@
                 		
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
                 		
         
         <property name="java-output-path" value="target/classes"/>
